# vk_chatbot_sweetshop

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.example  manage.py  pyproject.toml  start_service.sh
sweet_shop/: asgi.py  settings.py  urls.py  wsgi.py
vk_bot/: admin.py  bot.py  config.py  const.py  models.py  types.py
vk_bot/keyboards/: main_menu.py  service.py
vk_bot/management/commands/: run_bot.py
vk_bot/migrations/: 0001_initial.py  0002_products.py  0003_botconfigs.py
vk_bot/models/: categories.py  config.py  product.py  types.py
