[tool.poetry]
name = "sweet-shop"
version = "0.1.0"
description = ""
authors = ["atikhonov <aleksandrtikhonov91@gmail.com>"]
readme = "README.md"
packages = [{include = "sweet_shop"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
httpx = "^0.23.3"
pyyaml = "^6.0"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}
django-enumchoicefield = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
